# job-matcher

./: app.py  config.py  jd_embed_app.py  pyproject.toml  save_doc.py  streamlit_job_match.py  streamlit_job_match_2.py  test.py  vectorstore.py
